app/assets/stylesheets/staffsite.css.scss
$white: #fff;
$blue: #2f6b7f;
$orange: #de7c19;
$yellow: #FCD886;
$pagewidth: 960px;
$radius: 8px;

body {
  background: $white;
  font-family: Arial;
  font-size: 12px;
  line-height: 18px;
  margin: 0;
}

p {
  line-height: 1.55em;
}

h1, h2, h3, h4, h5, h6 {color: $blue; line-height: 1.15em; margin: 0; font-family: 'LatoBold';}

h2, h2 a {color: #000; text-decoration: none; text-shadow: 2px 2px 1px #eee; font-size: 28px;}

h3 {font-size: 15px; font-family: 'LatoBold'; letter-spacing: -1px; line-height: 1.45em;}

a {color: #3099bc;}

.listclean {padding: 0; margin: 0; list-style: none;}

.left {float: left;}
.right {float: right;}

#header,
#page_interior,
#welcome{
  margin: 0 auto;
  width: $pagewidth;
}

#header {
  border: 1px solid $white;
  background: #fff;
  height: 95px;
}

#logo {
  float: left;
  margin-top: 20px;
  margin-left: 28px;
  a {
    background: image-url("logo.png") no-repeat;
    width: 88px;
    height: 56px;
    overflow: hidden;
    text-indent: -1000px;
    display: block;
  }
}

#topsearch {
  float: right;
  margin-right: 10px;
  margin-top: 36px;
  #s {
    height: 25px;
    line-height: 25px;
    border: 1px solid #ccc;
    text-indent: 5px;
    width: 185px;
    padding-right: 25px;
    box-shadow: inset 0px 0px 3px rgba(0,0,0,.25);
    background: image-url("search.png") no-repeat 185px 45%;
  }
}

#menu {
  float: right;
  margin-top: 35px;
  margin-right: 15px;
  ul {
    list-style: none;
    margin: 0;
    padding: 0;
    li {
      
      font-size: 14px;
      border-right: 1px solid silver;
      line-height: 22px;
      margin: 0;
      padding: 0;
      display: inline-block;
    }
    li:last-child {
      border: none;
    }
  }
}

#menu ul li a {
  display: block;
  padding: 5px 10px;
  text-decoration: none;
  color: $blue;
}

#menu ul li.selected a, #menu ul li a:hover {
  background: none;
}

.clr {
  clear: both;
}

#welcome {
  font-family: 'LatoBlack';
  font-size: 60px;
  font-weight: bold;
  display: block;
  line-height: 1em;
  padding-top: 25px;
  color: $white;
  text-indent: 28px;
  text-shadow: rgba(0, 0, 0, 0.45) 0 2px 2px;
  .smaller {
    font-size: 30px;
  }
}

.items #welcome {
  text-shadow: rgba(0,0,0,.45) 0 2px 2px;
}

.meta {
  color: $blue;
  font-family: 'LatoRegular';
  font-size: 12px;
  margin-top: 8px;
}

#hero {
  padding-top: 36px;
  h2 {
    font-size: 32px;
  }
  .image {
    float: left;
    border: 2px solid $white;
    box-shadow: #999 0 0 7px;
    background: silver;
    display: block;
    max-height: 320px;
    margin-left: 36px;
    overflow: hidden;
    line-height: 0;
    img {
      width: 440px;
      height: 338px;
    }
  }
  .story {
    margin-left: 520px;
    margin-right: 36px;
  }
}

#nothero {
  background: #ebebeb;
  padding: 46px 42px;
  margin-top: 36px;
  article {
    width: 245px;
    float: left;
    margin-right: 70px;
  }
  article:nth-child(3) {
    margin-right: 0px;
  }
  .content {
    height: 75px;
  }
  .readmore {
    background: #000;
    border-radius: $radius;
    a {
      color: $white;
      line-height: 28px;
      display: block;
      text-decoration: none;
      padding: 0 10px;
      background: image-url("arrow.png") no-repeat 99% -32px;
    }
  }
  .image {
    margin-bottom: 15px;
    min-height: 110px;
    max-height: 125px;
    overflow: hidden;
    img {
      width: 245px;
      height: auto;
    }
  }
  .story {
    header {
      height: 66px;
    }
  }
  a {text-decoration: none;}
}

.btn, .smallbtn {
  background: red;
  box-shadow: inset rgba(0,0,0,.75) 0 0 10px;
  border-radius: $radius;
  line-height: 3em;
  padding: 0 18px;
  display: inline-block;
  font-weight: bold;
  color: #fff;
  text-shadow: 1px 1px 2px #000;
  text-decoration: none;
  font-size: 13px;
}

.btn:hover, .smallbtn:hover {box-shadow: inset rgba(0,0,0,.75) 0 -2px 10px;}
.btn:active, .smallbtn:hover {box-shadow: inset rgba(0,0,0,.75) 0 2px 10px;}

.smallbtn {
  background: #555;
  padding: 0 5px;
  line-height: 18px;
  font-size: 11px;
  font-weight: normal;
  border-radius: 3px;
}

.btn.readmore {
  background-color: $orange;
}

.rbreak {margin-top: 8px;}

#page {
  background: image-url("bg_stories.jpg") repeat-x;
  background-color: #cfcfcf;
  min-height: 912px;
  overflow: hidden;
}

.items #page {
  background-image: image-url("bg_stories.jpg");
  background-color: #cfcfcf;
}

#page_interior {
  border-radius: $radius $radius 0 0;
  background: #fff;
  box-shadow: rgba(0,0,0,.43) 0 0 9px;
  overflow: hidden;
}

#body_content, #side_body_content {
  float: left;
  width: 45%;
  color: #333;
  padding: 20px;
}

/* ************************ */
.nostyle {
  list-style: none;
  margin: 0;
  padding: 0;
  a {text-decoration: none;}
}

ul.recentposts {
  padding: 15px 30px;
  li {
    border-bottom: 1px solid silver;
    padding-bottom: 15px;
    margin-bottom: 15px;
    .excerpt {line-height: 1.25em;}
    h3 {margin-bottom: .5em;}
  }
}

ul.cats {
  padding: 15px 30px;
  li {
    margin-bottom: 8px;
    h4 {margin-bottom: 0em; line-height: 1.25em; font-family: 'LatoRegular'}
  }
}

.items {
  #body_content {
    margin: 0 auto;
    width: $pagewidth;
    float: none;
    padding: 0px;
    background: image-url("sidebar.jpg") repeat-y 100%;
  }
  #body_content_title {
    display: none;
  }
  #side_body {
    width: 285px;
    float: right;
    h2 {
      background: image-url("blue.jpg") repeat-y;
      color: $white;
      font-size: 18px;
      line-height: 2em;
      text-indent: 25px;
      font-family: 'LatoRegular';
      letter-spacing: 0;
      text-shadow: rgba(0,0,0,.5) 1px 1px 4px;
      font-weight: normal;
    }
    .inner {
      padding-top: 47px;
    }
  }
  #body {
    width: 675px;
    overflow: hidden;
    float: left;
    .inner {
      padding: 40px 30px;
      min-height: 736px;
    }
    img {
      max-width: 675px;
      height: auto;
    }
    .news_item_truncated {
      border-bottom: 1px dotted gray;
      margin-bottom: 30px;
      padding-bottom: 30px;
    }
    .news_item_truncated:last-child {
      border-bottom: 0px dotted gray;
      margin-bottom: 0px;
      padding-bottom: 0px;
    }
    h2 {
      line-height: 1.35em;
    }
    .news_date {
      font-family: 'LatoRegular';
      font-size: 14px;
      margin-top: 8px;
    }
    .article_content {
      margin-top: 30px;
    }
  }
}

@mixin inner {
  min-height: 200px;
  margin: 0 auto;
  width: $pagewidth;
}

#toolbox {
  background: #262626;
  border-top: 1px solid #999;
  padding-bottom: 40px;
  .inner {@include inner;}
}

#logos {
  text-align: center;
}

.ilogo {
  height: 88px;
  line-height: 88px;
  margin: 5px 24px 5px 24px;
  background: none;
  text-align: center;
  display: inline-block;
  img {
    vertical-align: middle;
    max-height: 60px;
  }
}

#tools {
  .title {font-size: 13px; display: block; margin-bottom: 5px;}
  .title span {display: none; font-weight: bold;}
  p {color: #999; margin: 0;}
  li.withdesc {margin-bottom: 2em;}
}

.bottom {
  width: 100%;
  padding: 20px 5px;
  td {
    padding: 10px 20px;
    vertical-align: top;
  }
  td {
    border-right: 1px solid #555;
  }
  td:last-child {
    border-right: 0;
  }
  h3 {
    color: #fff;
    margin-bottom: 15px;
    font-size: 18px;
  }
  .bfield {
    color: #999;
    font-size: 14px;
    label {margin-right: 4px;}
    .amount {
      background: #fff;
      color: #000;
      border-radius: 15px;
      padding: 8px 10px;
      font-size: 1.05em;
      display: inline-block;
      margin-left: 5px;
      width: 125px;
    }
  }
  .fieldwrap {
    background: #fff;
    border-radius: 8px;
    padding: 2px;
    display: inline-block;
    input, select {border: none; background: none;}
    select {border: 1px solid #ddd;}
    input[type=text] {width: 180px; outline: none;}
  }
  button {
    background: #fcd886;
    border-radius: 15px;
    text-align: center;
    color: #886d2d;
    font-weight: bold;
    line-height: 2.5em;
    border: none;
    font-size: 13px;
    text-shadow: 1px 1px 0px #fff;
    box-shadow: inset 0 0 5px rgba(0,0,0,.8);
    padding: 0 10px;
    cursor: pointer;
  }
  button:hover {
    box-shadow: inset 0px -5px 5px rgba(0,0,0,.25);
  }
  button:active {
    box-shadow: inset 0px 5px 5px rgba(0,0,0,.25);
  }
  button.go {
    border-radius: 4px;
    font-size: 12px;
    background: #ddd;
    color: #000;
    border: none;
    box-shadow: none;
  }
}



h3.bal {margin-top: 15px; margin-bottom: 5px;}

ul.notifications,
ul.bal,
ul.teams {
  color: $white;
  font-size: 11px;
  li {margin-bottom: 4px;}
  a {
    display: inline-block;
    text-decoration: none;
    .type {
      background: $blue;
      border-radius: 5px;
      font-weight: normal;
      font-size: 11px;
      padding: 0px 4px;
      line-height: 1.45em;
      text-align: center;
      display: inline-block;
      margin-right: 4px;
      color: $white;
    }

  }
  a:hover > .type {
    background: $orange;
  }
}

ul.bal {
  li {font-size: 14px; color: #999;}
}

ul.teams {
  li {margin-bottom: 4px;}
}

ul.linkset {
  list-style: none;
  margin: 10px 0 15px;
  padding: 0;
  font-size: 11px;
  a {
    text-decoration: none;
  }
  a:hover {
    color: $blue;
  }
  li.title {
    color: #fff;
    font-size: 14px;
    font-weight: bold;
    margin-bottom: 5px;
  }
  li ul {padding-left: 1em; list-style: none;}
}

div.tabgroup {
  margin-bottom: 50px;
}

div.tabbers {
  float: right;
  margin-right: 15px;
  .tab {
    border-radius: 0 0 8px 8px;
    background: #151515;
    padding: 10px 12px;
    margin-left: 4px;
    color: #999;
    font-weight: bold;
    font-size: 14px;
    text-decoration: none;
    margin-top: -1px;
    float: left;
    border-top: 1px solid #353535;
  }
  .tab.active {
    border: 1px solid #353535;
    border-top: none;
  }
}

div.col50 {
  float: left;
  width: 450px;
  margin: 10px 0;
  padding: 0 0 0 30px;
  
}

div.col50:last-child,
div.col32:last-child {
  padding-left: 0;
}

div.col32 {
  float: left;
  width: 300px;
  margin: 10px 0;
  padding: 0 0 0 30px;
}

.exp {
  margin-top:30px;
  background: #151515;
  box-shadow: inset rgba(0,0,0,.89) 0 0 13px, #000 0 0 8px;
  min-height: 90px;
  border-radius: $radius;
  border-bottom: 1px solid #353535;
}

.expandbtn {
  background: image-url("plus.png") no-repeat;
  width: 39px;
  height: 39px;
  margin: -19px;
  display: block;
  position: absolute;
}

footer {
  background: #101010;
  box-shadow: 0 0 8px #000;
  border-top: 1px solid #3d3d3d;
  position: absolute;
  width: 100%;
  color: #878787;
  text-align: center;
  a {text-decoration: none;}
  .inner {@include inner;}
  .help {background: image-url("help.png") no-repeat 0 50%; padding-left: 25px; font-size: 12px; font-weight: bold;}
}

.clearfix, section {
  display: inline-block;
  &:after {
    content: ".";
    display: block;
    height: 0;
    clear: both;
    visibility: hidden;
  }
}

/* Hide from IE Mac \*/
.clearfix, section {
  display:block;
}

